// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`uts:stacktrace:runtime parseUTSKotlinRuntimeStacktrace 1`] = `
"java.lang.IndexOutOfBoundsException: Index: 1, Size: 1
11 |          onLoad() {
12 |              const arr = [1]
13 |              console.log(arr[1])
   |              ^^^^^^^^^^^^^^^^^^^
14 |          },
15 |          methods: {
at pages/index/index.uvue:13:12"
`;

exports[`uts:stacktrace:runtime parseUTSKotlinRuntimeStacktrace 2`] = `
"java.lang.IndexOutOfBoundsException: Index: 1, Size: 1
16 |              click() {
17 |                  const arr = [1]
18 |                  console.log(arr[1])
   |                  ^^^^^^^^^^^^^^^^^^^
19 |              },
20 |              click1() {
at pages/index/index.uvue:18:16"
`;

exports[`uts:stacktrace:runtime parseUTSKotlinRuntimeStacktrace 3`] = `
"java.lang.IndexOutOfBoundsException: Index: 1, Size: 1
1  |  export function test() {
2  |      const arr = [1]
3  |      console.log(arr[1])
   |      ^^^^^^^^^^^^^^^^^^^
4  |  }
at pages/index/test.uts:3:4"
`;

exports[`uts:stacktrace:runtime parseUTSKotlinRuntimeStacktrace 4`] = `
"​java.lang.IndexOutOfBoundsException: Index: 1, Size: 1​
1  |  export function test() {
2  |      const arr = [1]
3  |      console.log(arr[1])
   |      ^^^^^^^^^^^^^^^^^^^
4  |  }
at pages/index/test.uts:3:4"
`;

exports[`uts:stacktrace:runtime parseUTSKotlinRuntimeStacktrace 5`] = `
"‌java.lang.IndexOutOfBoundsException: Index: 1, Size: 1‌
1  |  export function test() {
2  |      const arr = [1]
3  |      console.log(arr[1])
   |      ^^^^^^^^^^^^^^^^^^^
4  |  }
at pages/index/test.uts:3:4"
`;
